--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>helloworld</title>
- 
+</head>
+<body>
+<p>HelloWorldcup</p>
 </body>
 </html>
